# Atom-Copilot

./: .gitignore  LICENSE.txt  Readme.md  index.html  package.json  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  utils.rs
src/components/ChatingField/: FileUpload.tsx  NormalChat.tsx  index.tsx
src/components/InputField/: index.tsx
src/components/Instruction/: IntroCard.tsx  index.tsx
src/components/UI/: LazyLoad.tsx
src/pages/: MainPage.tsx
src/pages/Auth/: Login.tsx
src/routes/: index.tsx
